# scratch

./: .gitmodules  CMakeLists.txt  README.md  barrier.h  blink_timer.cpp  cam.c  checksum.cpp  clog_spdlog_bench.cpp  crtp.cpp  demangle.cpp  dof.cpp  enum_flags.cpp  enum_math.cpp  enum_to_string.cpp  exp_lpf.py  get_ethernet_interfaces.cpp  get_ip.c  get_ip_mac.cpp  get_mac.cpp  has_method.cpp  interface_with_concept.cpp  kbhit.c  linalg.cpp  midi_monitor.cpp  multi_arg_factory_starter.cpp  on_edge.cpp  replace.cpp  rtsan_example.cpp  simd_example.cpp  spmcq.cpp  term_handler.cpp  this_ptr.cpp  tomlplusplus.cpp  type_erasure.cpp  universal_print.cpp  variadic_bindings.cpp  virtual_funk.cpp
3d_basics/: README.md  index.js
3dvis/: CMakeLists.txt  README.md
3dvis/osg/wemo/: 01_wemo.cpp  CMakeLists.txt
3dvis/osg/wemo/model/: wemo_wheel0.osgt  wemo_wheel1.osgt
3dvis/qt/: .gitattributes  CMakeLists.txt  wemo.cpp  wemo.qrc
3dvis/qt/model/: B-RBH-0036-A.mtl  B-RBH-0037-A.fbx  B-RBH-0037-A.glb  B-RBH-0037-A.mtl  body.gltf  body.mtl  body.qgltf  body.qrc  test.stl  wheel0.gltf  wheel1.gltf
JpegLibTest/: ImageCompressor.h  JpegCompressor.cpp  JpegCompressor.h  main.cpp
NiTest/: NiTest.pro  main.cpp
boost_cmake/: CMakeLists.txt
camera_streaming/: gstreamer_glfw.c  v4l_glfw.c  v4l_sdl2.cpp
can_message/: CMakeLists.txt  can_message.cpp
clang_xc/: CMakeLists.txt  README.md  main.cpp  toolchain_clang_aarch64.cmake
cmake_build_by_option/: CMakeLists.txt  TODO.md
cmake_build_by_option/cmake/: helpers.cmake
cmake_build_by_option/module_ai/: CMakeLists.txt  ai.h
cmake_build_by_option/module_bea/: CMakeLists.txt  bea.cpp  bea.h
cmake_build_by_option/module_see/: CMakeLists.txt  see.cpp  see.h
cmake_build_by_option/module_see/module_see_one/: CMakeLists.txt  one.cpp
cmake_dependency_management/: CMakeLists.txt
conan_test/: using_conan.txt
dds_topics_list/: CMakeLists.txt  main.cpp
fsm/: CMakeLists.txt  fsm.h  fsm2.cpp  fsm2.h  main.cpp  main2.cpp  modern_fsm.cpp
gpio/: CMakeLists.txt  lsgpio.c  (+1 more)
gstreamer_glfw/: CMakeLists.txt  main.cpp
learn_opengl/: .clang-tidy  CMakeLists.txt  README.md
learn_opengl/cmake/: formatter.cmake  linter.cmake
learn_opengl/src/: 01_hello_window.cpp  02_hello_triangle.cpp  03_hello_shaders.cpp  04_hello_shaders2.cpp  05_hello_textures.cpp  06_hello_transforms.cpp  07_hello_coord_systems.cpp  08_hello_camera.cpp  09_hello_lights.cpp  shader_compiler.cpp  shader_compiler.h  stb_image.h
learn_opengl/src/shaders/: 04_fragment_shader.fs  04_vertex_shader.vs  05_fragment_shader.fs  05_vertex_shader.vs  06.vert  07.frag  07.vert
libcamera-test/: CMakeLists.txt  hello.cpp
lockfree_mpscq/: CMakeLists.txt  README.md  mpscq.cpp  mpscq.h  mpscq_example.cpp
modern_cpp_design_patterns/Solutions/2_Modern_Cpp_Design_Patterns/: CMakeLists.txt  Command.cpp  Decorator.cpp  Decorator_Benchmark.cpp  ExpressionTemplates.cpp  Function.cpp  Makefile  Observer.cpp  Ranges.cpp  Strategy.cpp  Strategy_Benchmark.cpp  TypeErasure.cpp  TypeErasure_dyno.cpp  Visitor.cpp  Visitor_Benchmark.cpp
modern_cpp_design_patterns/Tasks/2_Modern_Cpp_Design_Patterns/: CMakeLists.txt  CRTP.cpp  Command.cpp  Decorator.cpp  ExpressionTemplates.cpp  Function.cpp  InplaceFunction.cpp  Makefile  ObjectOriented.cpp  Observer.cpp  Procedural.cpp  Prototype.cpp  Ranges.cpp  Ranges_v3.cpp  Singleton.cpp  StateMachine.cpp  Strategy.cpp  TypeErasure.cpp  Visitor.cpp
osg_experiments/learn/: 00_model_file.cpp  12_attributes.cpp  15_lights.cpp  CMakeLists.txt
osg_experiments/wemo/: 01_wemo.cpp  CMakeLists.txt  README.md  config.toml
osg_test/: 02_quad.cpp  04_tessellate.cpp  05_triangle_face_collector.cpp  06_custom_drawable.cpp  07_translate.cpp  08_lod.cpp  09_load_at_runtime.cpp  11_visitor.cpp  CMakeLists.txt  README.md  main.cpp
plot_tests/: CMakeLists.txt  sdlplot.cpp
plot_tests/cmake/modules/: FindQwt.cmake
plot_tests/glfw/: CMakeLists.txt  README.md  glfw_plot.cpp
plot_tests/plotlib/: CMakeLists.txt
plot_tests/plotlib/example/: main.cpp
plot_tests/plotlib/fonts/fraktion-mono/: exFont-License.txt
plot_tests/plotlib/include/plotlib/: PlotWidget.h  Trace.h
plot_tests/plotlib/src/: PlotWidget.cpp  Trace.cpp  embedded_font.cpp  embedded_font.h
plot_tests/qcp/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  plot-examples.pro  window.cpp  window.h
plot_tests/qt6/: CMakeLists.txt  line_graph.cpp  line_graph.h  main.qml  widget.cpp
plot_tests/qwt/: CMakeLists.txt  QwtExample.pro  main.cpp  window.cpp  window.h
plot_tests/sdl3/: CMakeLists.txt  README.md  sdlplot.cpp
qml_hello/: CMakeLists.txt  main.cpp  main.qml  main.qrc  readme.md
qtcharts_tests/qtLineGraph/: CMakeLists.txt  line_graph.cpp  line_graph.h  main.cpp  widget.cpp  widget.h
qtcharts_tests/qtLineGraph/qml/graph/: main.qml
rest_serve/: CMakeLists.txt  client.cpp  server.cpp
rtps_keys_exp/: CMakeLists.txt  README.md  endpoint.cpp  endpoint.h  main.cpp  my_topic.cpp  my_topic.h  my_type.h  reader.cpp  reader.h  writer.cpp  writer.h
rtps_rediscovery_test/: CMakeLists.txt  endpoint.cpp  endpoint.h  main.cpp  reader.cpp  writer.cpp  writer.h
scenegraph/copilot/: CMakeLists.txt  MODERN_CONVERSION.md  README.md  cone.cpp  cone.hpp  cube.cpp  cube.hpp  cylinder.cpp  light.cpp  light.hpp  main.cpp  modern_example.cpp  modern_scenegraph.hpp  plane.cpp  scenegraph.hpp  separator.cpp  separator.hpp  sphere.cpp  sphere.hpp
scenegraph/copilot/modern/: modern_demo.cpp  modern_scenegraph.cpp
scenegraph/copilot/oop/: camera.cpp  camera.hpp  cube.cpp  cylinder.cpp  cylinder.hpp  light.hpp  main.cpp  node.hpp  plane.cpp  plane.hpp  scenegraph.cpp  separator.hpp  transform.cpp  transform.hpp
sdl_gpu_hello/: .clang-tidy  CMakeLists.txt  README.md  main.cpp
sdl_gpu_hello/cmake/: linter.cmake
sdl_gpu_hello/shaders/: fragment.glsl  vertex.glsl
serdes_eigen/: CMakeLists.txt  main.cpp
typeinfo/: CMakeLists.txt  readme.txt
typeinfo/src/: CMakeLists.txt  TypeInfo.cpp  TypeInfo.h  TypeInfoT.h  cmake_config.h  cmake_config.h.in
typeinfo/test/: CMakeLists.txt  TypeInfoTest.cpp
(+206 files in other folders)
