find_package(robohive COMPONENTS REQUIRED wemo)
find_package(osg)
find_package(osgGA)
find_package(osgViewer)
find_package(osgDB)
find_package(osgUtil)
find_package(Eigen3)
find_package(Threads)
find_package(foonathan_memory)

add_executable(01_wemo 01_wemo.cpp README.md config.toml)
target_link_libraries(01_wemo osg osgUtil osgViewer osgDB osgGA robohive::wemo atomic)
