find_package(robohive COMPONENTS REQUIRED wemo)
find_package(osg)
find_package(osgGA)
find_package(osgViewer)
find_package(osgDB)
find_package(osgUtil)
find_package(Eigen3)
find_package(Threads)
find_package(foonathan_memory)

add_executable(wemo_osg 01_wemo.cpp config.toml)
target_link_libraries(wemo_osg osg osgUtil osgViewer osgDB osgGA robohive::wemo atomic)
